[package]
name = "healthcheck"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.55"
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = { version =  "0.1.8", features = ["net"] }
tonic = { git = "https://github.com/tisonkun/tonic", branch = "issue-929", package = "tonic" }
tonic-health = { git = "https://github.com/tisonkun/tonic", branch = "issue-929", package = "tonic-health" }
tracing = "0.1.31"
tracing-subscriber = "0.3.9"
warp = "0.3.2"
